# react-native-blockchain

./: README.md  index.js  package.json
android/src/main/java/com/reactlibrary/: RNReactNativeBlockchainModule.java  RNReactNativeBlockchainPackage.java
ios/: RNReactNativeBlockchain.h  RNReactNativeBlockchain.m  RNReactNativeBlockchain.podspec
ios/RNReactNativeBlockchain.xcodeproj/: project.pbxproj
ios/RNReactNativeBlockchain.xcworkspace/: contents.xcworkspacedata
rust/: Cargo.toml
rust/src/: address.rs  lib.rs
